--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <a href="#" class="social-btn"><i class="fab fa-whatsapp"></i></a>
     </div>
 
-    <button class="btn-veja">Veja Mais</button>
+     <a href="#sobre" class="btn-veja">Veja mais...</a>
   </div>
     <!-- Imagem ao lado do texto -->
   <div class="hero-image">
