--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      <a href="#formacao">Trajetória Acadêmica</a>
     <a href="#contato">Contato</a>
   </nav>
-  <div class="menu-toggle" onclick="toggleMenu()">
+  
     <i class="fas fa-bars"></i>
   </div>
 </header>
@@ -42,7 +42,7 @@
       <a href="#" class="social-btn"><i class="fab fa-whatsapp"></i></a>
     </div>
 
-     <a href="#sobre" class="btn-veja">Veja mais...</a>
+    <button class="btn-veja">Veja Mais</button>
   </div>
     <!-- Imagem ao lado do texto -->
   <div class="hero-image">
@@ -65,6 +65,7 @@
     <div class="sobre-imagem">
       <img src="https://via.placeholder.com/400x300" alt="Equipe trabalhando">
     </div>
+     <a href="#sobre" class="btn-veja">Veja mais...</a>
   </div>
 </section>
   <!-- Projeto -->
